<resources>
    <string name="app_name">Rasyan_Ahmed_pset6</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_search">Search</string>
    <string name="nav_my_favorites">My Favorites</string>
    <string name="nav_followed_cooks">Followed Cooks</string>
    <string name="nav_my_cookbook">My Cookbook</string>
    <string name="nav_add_recipe">Add recipe</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Search</item>
        <item>My Favorites</item>
        <item>Followed Cooks</item>
        <item>My Cookbook</item>
        <item>Add recipe</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
</resources>
