<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_my_favorites"
            android:title="@string/nav_my_favorites" />
        <item
            android:id="@+id/nav_followed_cooks"
            android:title="@string/nav_followed_cooks" />

        <item
            android:id="@+id/nav_my_cookbook"
            android:title="@string/nav_my_cookbook" />

        <item
            android:id="@+id/nav_add_recipe"
            android:title="@string/nav_add_recipe" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>